---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret

---------------------------
  Jackdmp changes log
---------------------------

2008-06-12 Stephane Letz  <letz@grame.fr>

	* Another Tim Blechmann patch to remove unnecessary virtual methods.

2008-06-09 Stephane Letz  <letz@grame.fr>

	* Improve net driver so that jack clients can be registered even if driver has not yet started. 

2008-06-08 Stephane Letz  <letz@grame.fr>

	* Add a missing EXPORT for JackException class. 

2008-06-06 Stephane Letz  <letz@grame.fr>

	* Better error checking in JackGraphManager::RemoveAllPorts.

2008-06-05 Stephane Letz  <letz@grame.fr>

	* Better control of exported symbols.
	* Fix a bug in backend parameter parsing.

2008-06-04 Stephane Letz  <letz@grame.fr>

	* Merge of network branch.
	* Use of set_threaded_log_function only when needed in RT threads.

2008-06-02 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann patch to remove unnecessary virtual methods : choice of the appropriate platform version is now done at compilation time.

2008-06-02 Stephane Letz  <letz@grame.fr>

	* Cleanup and correct wscript for example-clients.
	* Add a test for coherent freewheel state in JackDebugClient. 
	* Cleanup JackMutex class.

2008-05-31 Stephane Letz  <letz@grame.fr>

	* Add missing include for proper compilation when jack headers are not installed.

2008-05-30 Stephane Letz  <letz@grame.fr>

	* Avoid using Terminate when "quitting" in RT thread. Cleanup JackEngineInterface.

2008-05-29 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann patch for JackPosixSemaphore (still to test...).
	* Correct JackWinThread::Terminate.

2008-05-28 Stephane Letz  <letz@grame.fr>

	* New testMutex test, correct timing in drivers.
