@@ -189,6 +189,11 @@ int JackServer::SetBufferSize(jack_nframes_t buffer_size)
     jack_log("JackServer::SetBufferSize nframes = %ld", buffer_size);
     jack_nframes_t current_buffer_size = fEngineControl->fBufferSize;
 
+    if (current_buffer_size == buffer_size) {
+        jack_log("SetBufferSize: requirement for new buffer size equals current value");
+        return 0;
+    }
+
     if (fAudioDriver->Stop() != 0) {
         jack_error("Cannot stop audio driver");
         return -1;
